SonarQube/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube-db
  namespace: lmwprac
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube-db
  template:
    metadata:
      labels:
        app: sonarqube-db
    spec:
      containers:
        - name: postgres
          image: postgres:alpine
          ports:
          - containerPort: 5432
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: sonarqube-postgres-lmw-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-db-service
  namespace: lmwprac
spec:
  selector:
    app: sonarqube-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
